welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: type mismatch;
 found   : Int
 required: scala.reflect.ClassTag[Int.type]
  var T=Array(Int)(5*num)
                    ^golomb:5: error: type mismatch;
 found   : Int(1)
 required: Int.type
  T(0)=1
       ^golomb:6: error: type mismatch;
 found   : Int(2)
 required: Int.type
  T(1)=2
       ^golomb:7: error: type mismatch;
 found   : Int(2)
 required: Int.type
  T(3)=2
       ^golomb:9: error: type mismatch;
 found   : Int.type
 required: Int
    x=T(c)
       ^golomb:11: error: type mismatch;
 found   : c.type (with underlying type Int)
 required: Int.type
      T(i)=c
           ^golomb:14: error: type mismatch;
 found   : Int.type
 required: Int
  return T(num)
          ^